--- a/index-speaker.html
+++ b/index-speaker.html
@@ -376,7 +376,7 @@
 <div class="column" style="width:50%;">
 <br><br>
 <center>
-<img data-src="imgs/me2.jpg" style="width:50.0%">
+<img data-src="imgs/me2.png" style="width:50.0%">
 </center>
 </div><div class="column" style="width:50%;">
 <br><br>
