--- a/index-speaker.html
+++ b/index-speaker.html
@@ -444,6 +444,9 @@
 </section>
 <section id="project-2.-beyond-microsoft" class="slide level2">
 <h2><span style="font-family:Comic Sans MS;font-weight:normal;color:orange;">Project 2. Beyond Microsoft</span></h2>
+<center>
+<img data-src="imgs/beyond-microsoft.png" style="width:50.0%">
+</center>
 </section>
 <section id="beyond-microsoft" class="slide level2">
 <h2><span style="font-family:Comic Sans MS;font-weight:normal;color:orange;">Beyond Microsoft</span></h2>
